@@ -1,5 +1,10 @@
 2012-07-07  Iain Buclaw  <ibuclaw@ubuntu.com>
 
+	* d-codegen.cc(IRState::integerConstant): Hide use of
+	HOST_BITS_PER_WIDE_INT macros.
+	(IRState::hwi2toli): Likewise.
+	(IRState::getTargetSizeConst): Likewise.
+
 	* d-builtins.c(d_global_trees): Move declaration here.
 	(lookup_C_type_name): Rename to lookup_ctype_name.
 	(d_init_builtins): Move set-up of d_global_trees here.
